--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,37 @@ testem.log
 # System files
 .DS_Store
 Thumbs.db
+
+# Angular
+dist/
+node_modules/
+temp/
+tmp/
+
+# Environment
+.env
+.env.local
+*.local
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Docker
+*.pid
+docker-compose.override.yml
+
+# API
+db.json
+db.production.json
+
+# IDE
+.vscode/
+.idea/
